# infralayer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: cli-deploy.yml  test.yml  trivy.yml  website-deploy.yml
cli/: README.md  publish.sh  pyproject.toml
cli/src/infragpt/: main.py
cli/src/infralayer/: __init__.py  __main__.py  agent.py  api_client.py  auth.py  bump_version.py  config.py  container.py  encryption.py  history.py  main.py  prompts.py  shell.py  tools.py
cli/tests/: test_api_client.py  test_auth_strict.py  test_yolo_mode.py
docs/: docs.json
netlify-redirect/: _redirects
services/: CLAUDE.md
services/agent/: .env.example  CLAUDE.md  README.md
services/agent/src/agents/: base.py  main_agent.py  registry.py
services/backend/: CLAUDE.md  go.mod  go.sum
services/backend/backendapi/: grpc_server.go  handler.go
services/backend/backendapi/client/python/: README.md  pyproject.toml
services/backend/cmd/: main.go
services/backend/deviceapi/: handler.go  middleware.go
services/backend/identityapi/: handler.go
services/backend/identitytest/: identitytest.go
services/backend/integrationapi/: handler.go
services/backend/migrations/: 005_rename_database.sql
services/console/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
services/mcp/: go.mod
services/mcp/kubernetes/: .gitignore  Dockerfile  README.md  go.mod  go.sum
services/website/: CLAUDE.md  astro.config.mjs  package-lock.json  package.json
services/website/public/: robots.txt
(+87 files in other folders)
